Add new action show. Add view for show action. Change view for new action

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,7 +82,7 @@ body {
 }
 
 .form-wrapper {
-  width: 60%;
+  max-width: 642px;
   margin: 20px auto;
   background-color: #fff;
   padding: 40px;
