--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -2,7 +2,7 @@
   = simple_form_for @post, html: { class: 'form-horizontal', multipart: true } do |f|
     .form-group
       = f.input :image
-    .form-group.text-center
+    .form-group
       = f.input :caption
-    .form-group.text-center
+    .form-group
       = f.button :submit, class: 'btn-success'
